add support in get form fix some bugs
